--- a/app/about-us.html
+++ b/app/about-us.html
@@ -746,128 +746,40 @@
       </div>
     </section>
 
-    <section id="testimonials" class="testimonials">
-      <div class="container">
-        <div class="row justify-content-md-center">
-          <div class="col-12 col-md-10">
-            <div class="testimonials-carousel">
-              <div class="testimonial-slide testimonial">
-                <div class="row">
-                  <div class="col-12 col-sm-6 centered italic">
-                    <p class="quote">“Ignition Search steered our paid search strategy with clear objectives and invaluable expertise. With the focus on Return on Investment, they increased both branded and non-branded online conversions to record levels. Their ability to greatly improve the quality of the product feed, was a key factor in our success. As a result of their performance, we are now rolling out online shopping on an international scale.”</p>
-                    <h4 class="name">Robert Perry</h4><p class="small-grey-text">Digital Manager, Pretty Green </p>
-                  </div>
-                  <!-- <div class="author"></div> -->
-                </div>
+    <section class="solution testimonial">
+          <div class="container">
+          <div class="row no-gutters justify-content-center testimonials-carousel">
+              <div class="col-11 col-sm-10 col-md-8 slide">
+                <p>“Ignition Search steered our paid search strategy with clear objectives and invaluable expertise. With the focus on Return on Investment, they increased both branded and non-branded online conversions to record levels. Their ability to greatly improve the quality of the product feed, was a key factor in our success. As a result of their performance, we are now rolling out online shopping on an international scale.”</p>
+                <p class="author"><strong>Robert Perry, </strong>Digital Manager, Pretty Green </p>
               </div>
-              <div class="testimonial-slide">
-                <div class="row">
-                  <div class="col-12 col-sm-6">
-                    <figure><img class="img-fluid" src="images/about/testimonials/intouch.jpg" alt=""></figure>
-                  </div>
-                  <div class="col-12 col-sm-6 centered italic">
-                    <p class="quote">“We recently used Ignition Search to complete migration reports on our 5 websites prior to the launch of our new platform. Jon and the team were extremely professional, knowledgeable and the exercise was great value for money. They gave peace of mind throughout, sound advice and worked to a very tight deadline. Highly recommended” </p>
-                  </div>
-                  <div class="author"><h4 class="name">Faye Hughes</h4><p class="small-grey-text">Head of Member Generation, In Touch Networks</p></div>
-                </div>
+              <div class="col-11 col-sm-10 col-md-8 slide">
+                <p>“We recently used Ignition Search to complete migration reports on our 5 websites prior to the launch of our new platform. Jon and the team were extremely professional, knowledgeable and the exercise was great value for money. They gave peace of mind throughout, sound advice and worked to a very tight deadline. Highly recommended”</p>
+                <p class="author"><strong>Faye Hughes, </strong>Head of Member Generation, In Touch Networks</p>
               </div>
-
-              <div class="testimonial-slide">
-                <div class="row">
-                  <div class="col-12 col-sm-6">
-                    <figure><img class="img-fluid" src="images/about/testimonials/jackson.jpg" alt=""></figure>
-                  </div>
-                  <div class="col-12 col-sm-6 centered italic">
-                    <p class="quote">"Our ecommerce was treading water until Ignition sorted out our account and trebled the conversion rate. They've been trustworthy, helpful and reliable; they've got our best interests at heart and I can't recommend them enough."</p>
-                  </div>
-                  <div class="author"><h4 class="name">Lucie Jackson</h4><p class="small-grey-text">Managing Director, Jackson Woodturners </p></div>
-                </div>
+              <div class="col-11 col-sm-10 col-md-8 slide">
+                <p>“Our ecommerce was treading water until Ignition sorted out our account and trebled the conversion rate. They've been trustworthy, helpful and reliable; they've got our best interests at heart and I can't recommend them enough.”</p>
+                <p class="author"><strong>Lucie Jackson, </strong>Managing Director, Jackson Woodturners </p>
               </div>
-
-
-              <div class="testimonial-slide">
-                <div class="row">
-                  <div class="col-12 col-sm-6">
-                    <figure><img class="img-fluid" src="images/about/testimonials/kitlocker.jpg" alt=""></figure>
-                  </div>
-                  <div class="col-12 col-sm-6 centered italic">
-                    <p class="quote">“We have been more than happy with the work and results we are achieving with Ignition. They are a highly skilled team who are committed to helping us move our business forward. Our ROI continues to grow month on month and we look forward to continuing our successful relationship with Ignition.”</p>
-                  </div>
-                  <div class="author"><h4 class="name">Mike Kent</h4><p class="small-grey-text">Managing Director, Kitlocker</p></div>
-                </div>
+              <div class="col-11 col-sm-10 col-md-8 slide">
+                <p>“We have been more than happy with the work and results we are achieving with Ignition. They are a highly skilled team who are committed to helping us move our business forward. Our ROI continues to grow month on month and we look forward to continuing our successful relationship with Ignition.”</p>
+                <p class="author"><strong>Mike Kent, </strong>Managing Director, Kitlocker</p>
               </div>
-              <div class="testimonial-slide">
-                <div class="row">
-                  <div class="col-12 col-sm-6">
-                    <figure><img class="img-fluid" src="images/about/testimonials/hypnos.jpg" alt=""></figure>
-                  </div>
-                  <div class="col-12 col-sm-6 centered italic">
-                    <p class="quote">“Ignition for many years have provided Hypnos with an excellent service, running PPC campaigns across our consumer and contract divisions. Throughout, they’ve built activity through continual testing and learning, ensuring that our paid search activity has grown from strength to strength, and always with an eye to the future.”</p>
-                  </div>
-                  <div class="author"><h4 class="name">David Dawson</h4><p class="small-grey-text">Digital Marketing Manager, Hypnos Beds</p></div>
-                </div>
+              <div class="col-11 col-sm-10 col-md-8 slide">
+                <p>“Ignition for many years have provided Hypnos with an excellent service, running PPC campaigns across our consumer and contract divisions. Throughout, they’ve built activity through continual testing and learning, ensuring that our paid search activity has grown from strength to strength, and always with an eye to the future.”</p>
+                <p class="author"><strong>David Dawson, </strong>Digital Marketing Manager, Hypnos Beds</p>
               </div>
-
-              <div class="testimonial-slide">
-                <div class="row">
-                  <div class="col-12 col-sm-6">
-                    <figure><img class="img-fluid" src="images/about/testimonials/captain-cover.jpg" alt=""></figure>
-                  </div>
-                  <div class="col-12 col-sm-6 centered italic">
-                    <p class="quote">“Ignition Search have supported our digital marketing strategy with clear objectives, in-depth analyses and valuable expertise. They have always delivered on time, within budget and with a strong focus on performance.”</p>
-                  </div>
-                  <div class="author"><h4 class="name">Sharon West</h4><p class="small-grey-text">Managing Director, Lexelle - Captain Cover</p></div>
-                </div>
+              <div class="col-11 col-sm-10 col-md-8 slide">
+                <p>“Ignition Search have supported our digital marketing strategy with clear objectives, in-depth analyses and valuable expertise. They have always delivered on time, within budget and with a strong focus on performance.”</p>
+                <p class="author"><strong>Ben Brocklesby, </strong>Origin global</p>
               </div>
-
-              <div class="testimonial-slide">
-                <div class="row">
-                  <div class="col-12 col-sm-6">
-                    <figure><img class="img-fluid" src="images/about/testimonials/origin.jpg" alt=""></figure>
-                  </div>
-                  <div class="col-12 col-sm-6 centered italic">
-                    <p class="quote">"Ignition have been outstanding. Not only have they delivered fantastic ROI from our Adwords spend, they have recovered us from a complex Google penalty"</p>
-                  </div>
-                  <div class="author"><h4 class="name">Ben Brocklesby</h4><p class="small-grey-text">Origin global</p></div>
-                </div>
-              </div>
-            </div> <!-- testimonial carousel -->
-
-<h6 class="small-grey-text text-center mt-3">Trusted by</h6>
-          <div class="trusted-by-carousel">
-            <img src="images/trusted/1.png" alt="">
-            <img src="images/trusted/2.png" alt="">
-            <img src="images/trusted/3.png" alt="">
-            <img src="images/trusted/4.png" alt="">
-            <img src="images/trusted/5.png" alt="">
-            <img src="images/trusted/6.png" alt="">
-            <img src="images/trusted/7.png" alt="">
-            <img src="images/trusted/8.png" alt="">
-            <img src="images/trusted/9.png" alt="">
-            <img src="images/trusted/10.png" alt="">
-            <img src="images/trusted/11.png" alt="">
-            <img src="images/trusted/12.png" alt="">
-            <img src="images/trusted/13.png" alt="">
-            <img src="images/trusted/14.png" alt="">
-            <img src="images/trusted/15.png" alt="">
-            <img src="images/trusted/16.png" alt="">
-            <img src="images/trusted/17.png" alt="">
-            <img src="images/trusted/18.png" alt="">
-            <img src="images/trusted/19.png" alt="">
-            <img src="images/trusted/20.png" alt="">
-            <img src="images/trusted/21.png" alt="">
-            <img src="images/trusted/22.png" alt="">
-            <img src="images/trusted/23.png" alt="">
-            <img src="images/trusted/24.png" alt="">
-        </div>
+            </div>
           </div>
-          
-        </div>
-
-      </div>
+        </section>
+        <!-- testimonial -->
       
     </section>
-<!--     <section>
+    <section>
       <div class="container">
           <h6 class="small-grey-text text-center mt-3">Trusted by</h6>
           <div class="trusted-by-carousel">
@@ -897,7 +809,7 @@
             <img src="images/trusted/24.png" alt="">
         </div>
       </div>
-    </section> -->
+    </section>
 
     <section class="contact pb-0">
     <h2 class="fade-out">Contact</h2>
