--- a/app/contact.html
+++ b/app/contact.html
@@ -30,13 +30,13 @@
         <a class="navbar-brand" href="/"><img src="images/logos/logo-white-transparent.png" alt=""></a>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Search Engine Optimisation <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/seo.html">Search Engine Optimisation <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pay Per Click</a>
+            <a class="nav-link" href="/ppc.html">Pay Per Click</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Conversion Rate Optimisation</a>
+            <a class="nav-link" href="/cro.html">Conversion Rate Optimisation</a>
           </li>
         </ul>
         <a class="mobile bold d-none" href="+01142722444">0114 272 2444</a>        
